crates/deadline-cli/tests/cli/snapshots/cli__bundle_hooks__bundle_submit_pre_hook_failure_cancels.snap
---
source: crates/deadline-cli/tests/cli/bundle_hooks.rs
info:
  program: deadline
  args:
    - bundle
    - submit
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpaQ3vn8/hook_fails
    - "--yes"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCH_LOGS: "http://localhost:49445"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:49445"
    AWS_ENDPOINT_URL_S3: "http://localhost:49445"
    AWS_ENDPOINT_URL_STS: "http://localhost:49445"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpaQ3vn8/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpaQ3vn8
---
success: false
exit_code: 1
----- stdout -----
Submitting to Queue: Test Queue

Running pre-submission hook [1]: [HOOK_FAIL]

Pre-submission hook [1] failed: [HOOK_FAIL]
Exit code: 1
Pre-submission hook [1] failed with exit code 1: [HOOK_FAIL]

----- stderr -----
